--- a/clientCalc1/src/main/resources/com/example/clientcalc1/hello-view.fxml
+++ b/clientCalc1/src/main/resources/com/example/clientcalc1/hello-view.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="460.0" stylesheets="@HelloStyles.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.clientcalc1.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="770.0" stylesheets="@HelloStyles.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.clientcalc1.HelloController">
    <children>
       <Pane layoutX="3.0" layoutY="53.0" prefHeight="544.0" prefWidth="454.0" styleClass="mainPane">
          <children>
@@ -166,14 +167,14 @@
             </Pane>
          </children>
       </Pane>
-      <Pane fx:id="titlePane" prefHeight="45.0" prefWidth="460.0">
+      <Pane fx:id="titlePane" prefHeight="46.0" prefWidth="770.0">
          <children>
-            <ImageView fx:id="btnClose" fitHeight="33.0" fitWidth="29.0" layoutX="423.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btnClose" fitHeight="33.0" fitWidth="29.0" layoutX="727.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../../../Downloads/cancel.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btnHide" fitHeight="33.0" fitWidth="29.0" layoutX="387.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btnHide" fitHeight="33.0" fitWidth="29.0" layoutX="689.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../../../Downloads/minimize.png" />
                </image>
@@ -188,6 +189,20 @@
                   <Font name="Lucida Console" size="20.0" />
                </font>
             </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="462.0" layoutY="53.0" prefHeight="544.0" prefWidth="303.0" styleClass="mainPane">
+         <children>
+            <Label layoutX="59.0" layoutY="14.0" text="Operation history">
+               <font>
+                  <Font name="Lucida Console" size="18.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="txtAreaHist" editable="false" layoutX="7.0" layoutY="43.0" prefHeight="484.0" prefWidth="289.0" styleClass="framed">
+               <font>
+                  <Font name="Century Gothic" size="12.0" />
+               </font>
+            </TextArea>
          </children>
       </Pane>
    </children>
