--- a/Manager/src/main/resources/com/example/manager/hello-view.fxml
+++ b/Manager/src/main/resources/com/example/manager/hello-view.fxml
@@ -3,10 +3,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="384.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.manager.HelloController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="218.0" prefWidth="432.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.manager.HelloController">
    <children>
       <ListView fx:id="lvOperations" layoutX="14.0" layoutY="39.0" prefHeight="164.0" prefWidth="143.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Operaciones disponibles">
@@ -14,13 +15,43 @@
             <Font name="Century Gothic" size="12.0" />
          </font>
       </Label>
-      <Button fx:id="btnSend" layoutX="322.0" layoutY="179.0" mnemonicParsing="false" onMouseClicked="#onBtnSendClick" onMousePressed="#onBtnSendClick" text="Enviar" />
-      <Button fx:id="btnUpdate" layoutX="173.0" layoutY="179.0" mnemonicParsing="false" text="Actualizar" />
-      <Label layoutX="204.0" layoutY="14.0" text="Servidores conectados">
+      <Button fx:id="btnSend" layoutX="252.0" layoutY="179.0" mnemonicParsing="false" onMouseClicked="#onBtnSendClick" onMousePressed="#onBtnSendClick" text="Enviar operación" />
+      <Button fx:id="btnUpdate" layoutX="173.0" layoutY="179.0" mnemonicParsing="false" onMouseClicked="#onBtnUpdateClick" onMousePressed="#onBtnUpdateClick" text="Actualizar" />
+      <Label alignment="CENTER" layoutX="180.0" layoutY="9.0" prefHeight="25.0" prefWidth="84.0" text="Servidores" textAlignment="CENTER" textOverrun="CLIP">
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font>
       </Label>
-      <ListView fx:id="lvServers" editable="true" layoutX="173.0" layoutY="39.0" prefHeight="134.0" prefWidth="195.0" />
+      <ListView fx:id="lvServers" editable="true" layoutX="173.0" layoutY="39.0" prefHeight="128.0" prefWidth="98.0" />
+      <Label alignment="CENTER" layoutX="304.0" layoutY="9.0" prefHeight="25.0" prefWidth="84.0" text="Acuses" textOverrun="CLIP">
+         <font>
+            <Font name="Century Gothic" size="12.0" />
+         </font>
+      </Label>
+      <Spinner fx:id="spSum" editable="true" initialValue="3" layoutX="360.0" layoutY="39.0" max="10" min="1" prefHeight="25.0" prefWidth="58.0" />
+      <Spinner fx:id="spSub" editable="true" initialValue="2" layoutX="360.0" layoutY="71.0" max="10" min="1" prefHeight="25.0" prefWidth="58.0" />
+      <Spinner fx:id="spMult" editable="true" initialValue="2" layoutX="360.0" layoutY="103.0" max="10" min="1" prefHeight="25.0" prefWidth="58.0" />
+      <Spinner fx:id="spDiv" editable="true" initialValue="1" layoutX="360.0" layoutY="135.0" max="10" min="1" prefHeight="25.0" prefWidth="58.0" />
+      <Button fx:id="btnSendAck" layoutX="366.0" layoutY="179.0" mnemonicParsing="false" onMouseClicked="#onBtnSendAck" text="Acuses" />
+      <Label layoutX="300.0" layoutY="44.0" text="Suma">
+         <font>
+            <Font name="Century Gothic" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="300.0" layoutY="76.0" text="Resta">
+         <font>
+            <Font name="Century Gothic" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="276.0" layoutY="108.0" text="Multiplicación">
+         <font>
+            <Font name="Century Gothic" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="295.0" layoutY="140.0" text="División">
+         <font>
+            <Font name="Century Gothic" size="12.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
